@@ -172,6 +172,7 @@ class ConsoleView(gtk.TextView):
     self.last_cursor_pos = 0
     
   def write(self, text, editable=False):
+    print 'writing', text
     segments = self.color_pat.split(text)
     segment = segments.pop(0)
     start_mark = self.text_buffer.create_mark(None, 
@@ -275,12 +276,12 @@ class IPythonView(ConsoleView, IterableIPShell):
       completed, possibilities = self.complete(self.getCurrentLine())
       if len(possibilities) > 1:
         slice = self.getCurrentLine()
+        print 'slice:', slice
         self.write('\n')
         for symbol in possibilities:
           self.write(symbol+'\n')
         self.showPrompt(self.prompt)
-        self.write(slice, True)
-      self.changeLine(completed)
+      self.changeLine(completed or slice)
       return True
 
   def _processLine(self):
