@@ -1,5 +1,10 @@
 2007-04-16  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/ipython_view.py: Fixed TAB completion on opn brackets
+	(bug 427048).
+
+2007-04-16  Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/ipython_view.py: * plugins/ipython_view.py: Enable
 	Home+Shift overwriting in the prompt.
 	* src/lib/accerciser/script_playback.py: run() now returns
